@@ -2,6 +2,10 @@ Revision history for Dist-Zilla-PluginBundle-DAGOLDEN
 
 {{$NEXT}}
 
+    [CHANGED]
+
+    - Allow dirty Makefile.PL/cpanfile and commit it before tagging.
+
 0.073     2014-12-10 16:36:34-05:00 America/New_York
 
     [CHANGED]
